DTSAM-1037 Adjust constants used in judicial drool rules